--- a/Expriment_report_Physics3/charts.ipynb
+++ b/Expriment_report_Physics3/charts.ipynb
@@ -17,13 +17,13 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt \n",
-    "    \n",
-    "# x axis values \n",
-    "f_x_axis = [197, 251, 280, 313, 362] \n",
-    "\n",
+    " # x axis values \n",
+    "f_x_axis = [197, 251, 280, 313, 362, 427] \n",
+    "devide_f_x_axis = [0.0051, 0.0040, 0.0036, 0.0032, 0.0028, 0.0023]\n",
     "# corresponding y axis values \n",
-    "l1_y_axis = [2,4,1] \n",
-    "l2_y_axis = []\n",
+    "l1_y_axis = [28.0, 15.8, 14.1, 12.3 10.7, 8.8]\n",
+    "l2_y_axis = [56.0, 33.0, 29.0, 26.7, 22.5, 18.9]\n",
+    "\n",
     "\n",
     "# plotting the points  \n",
     "plt.plot(f_x_axis, l1_y_axis) \n",
