--- a/Expriment_report_Physics3/گزارش آز سه.tex
+++ b/Expriment_report_Physics3/گزارش آز سه.tex
@@ -385,7 +385,7 @@ $f = 250, 280, 310, 360, 420, 500, 620$ HZ
 
 فرکانس‌های ثبت شده در آزمایشگاه برابرند با:
 \begin{latin}
-$f_{exprement} = 197, 251, 280, 313, 362$ HZ
+$f_{exprement} = 197, 251, 280, 313, 362, 403, 427$ HZ
 \end{latin}
 
 خطای این اعداد از مرتبه‌ی یک هرتز می‌باشد.
@@ -405,15 +405,40 @@ $f_{exprement} = 197, 251, 280, 313, 362$ HZ
 		280 & 3.57E-03 & 14.1 & 29.0 \\ \hline
 		313 & 3.19E-03 & 12.3 & 26.7 \\ \hline
 		362 & 2.76E-03 & 10.7 & 22.5 \\ \hline
+		427 & 2.34E-03 & 8.8 & 18.9\\ \hline
+		603 & 2.16E-03 & 7.5 & 17.0\\ \hline
 	\end{tabular}
 \end{table}
 \end{latin}
 
 
+با رسم نمودار داده‌های داده شده در جدول بالا،‌می‌توان مقادیر شیب را دو نمودار \lr{L1-1/f} و نمودار \lr{L2-1/f} را بدست‌آوریم. 
+در نهایت با کمک فرمول شیب که در بالاتر ذکر شده است؛ می‌توان مقدار سرعت صوت را بدست بیاوریم. با میانگین‌گیری از دو سرعت، سرعت واقعی صوت را بدست خواهیم آورد.
 
+برای \lr{$LK_1$ and $K = 1$} : 
+\begin{center}
+$ 4249 = \frac{(2k-1)v}{4} \implies v = 169.96  m/s$
+\end{center}
+برای \lr{$LK_2$ and $K = 2$} : 
+\begin{center}
+$ 8487 = \frac{(2k-1)v}{4} \implies v = 113.16  m/s$
+\end{center}
+با میانگین گیری از دو کمیت داریم:
+\begin{center}
+$\bar{v} = \frac{113.16 + 169.96}{2} = 141.56  m/s$
+\end{center}
 
+خطاگیری از روابط به صورت دستنویس در پیوست موجود است.
+حال باید با کمک رابطه‌ی تجربی \lr{$v = v_0 + 0.61\theta$} سرعت صوت را دمای صفر درجه سلسیوس بدست می‌آوریم.
 
+دمای آزمایشگاه درهنگام آزمایش برابر با 27 درجه‌ی سلسیوس گزارش شده است. مقادیر را جایگذاری می‌کنیم:
 
+$v = 141.56 + 0.61*27 \implies v = 158.03 m/s$
+
+عدد بدست آمده کمتر از نصف عدد انتظاری یعنی 331 متر برثانیه می‌باشد. با اینحال بنده اعداد ناشی از گروه‌های دیگر را نیز بررسی  کردم و سرعت صوت درمقیاس و اندازه‌ی مشابه با اعداد بنده گزارش شده بودند. بنابرین محتمل است که خطای گزارش شده ناشی از خطای‌آزمایشگر و دستگاه‌های آزمایش باشد.
+نمودار در ادامه آمده است.
+
+نموار و پرسش ها و خطاگیری مانده است.
 
 
 \end{document}
