--- a/Expriment_report_Physics3/گزارش آز سه.tex
+++ b/Expriment_report_Physics3/گزارش آز سه.tex
@@ -431,14 +431,40 @@ $\bar{v} = \frac{113.16 + 169.96}{2} = 141.56  m/s$
 خطاگیری از روابط به صورت دستنویس در پیوست موجود است.
 حال باید با کمک رابطه‌ی تجربی \lr{$v = v_0 + 0.61\theta$} سرعت صوت را دمای صفر درجه سلسیوس بدست می‌آوریم.
 
-دمای آزمایشگاه درهنگام آزمایش برابر با 27 درجه‌ی سلسیوس گزارش شده است. مقادیر را جایگذاری می‌کنیم:
+\pagebreak
 
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.55]{L_K1.png}
+	\caption{نمودار تغییرات مکان اولین گره‌ی صوتی به ازای فرکانس های مختلف}
+	\label{first}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[scale=0.55]{L_K2.png}
+	\caption{نمودار تغییرات مکان دومین گره‌ی صوتی به ازای فرکانس های مختلف}
+	\label{Seconde}
+\end{figure}
+
+دمای آزمایشگاه درهنگام آزمایش برابر با 27 درجه‌ی سلسیوس گزارش شده است. مقادیر را جایگذاری می‌کنیم:
+\begin{center}
 $v = 141.56 + 0.61*27 \implies v = 158.03 m/s$
+\end{center}
 
 عدد بدست آمده کمتر از نصف عدد انتظاری یعنی 331 متر برثانیه می‌باشد. با اینحال بنده اعداد ناشی از گروه‌های دیگر را نیز بررسی  کردم و سرعت صوت درمقیاس و اندازه‌ی مشابه با اعداد بنده گزارش شده بودند. بنابرین محتمل است که خطای گزارش شده ناشی از خطای‌آزمایشگر و دستگاه‌های آزمایش باشد.
-نمودار در ادامه آمده است.
 
-نموار و پرسش ها و خطاگیری مانده است.
+
+
+
+\section{پرسش‌ها}
+
+1. سرعت صوت به دمای محیط و چگالی ماده‌ی داخل محیط بستگی دارد. \\
+2. در این آزمایش از نوسان‌سازی استفاده کردیم که به طور دقیق توان ایجاد فرکانس های مدنظر را نداشت. و با تقریب می‌توانستیم به فرکانس مدنظر دست پیدا کنیم. از طرفی هرچقدر هم نوسان ساز دقیق کار کند، بلندگوی نصب شده برای ایجاد تپ های صوتی با دقت بالا طراحی نشده است. بنابرین می‌تواند این مساله باعث خطا باشد. \\
+3. بله ولی ضرایب داخل فرمول دچار تغییر خواهند شد.
+
 
 
 \end{document}
